objects/ssot__CarePlanActivity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityCodeId__c</fullName>
        <label>Activity Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityCodeObject__c</fullName>
        <label>Activity Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityLocationId__c</fullName>
        <label>Activity Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityLocationObject__c</fullName>
        <label>Activity Location Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityReferenceRecordId__c</fullName>
        <label>Activity Reference Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityReferenceRecordObject__c</fullName>
        <label>Activity Reference Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTimingId__c</fullName>
        <label>Activity Timing</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdministeredMedicationCodeId__c</fullName>
        <label>Administered Medication Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdministeredProductId__c</fullName>
        <label>Administered Medication</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlanId__c</fullName>
        <label>Care Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DailyDoseQuantity__c</fullName>
        <label>Daily Dose Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DailyDoseUnitofMeasureId__c</fullName>
        <label>Daily Dose Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Plan Activity Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsProhibitedActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prohibited Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduleDescription__c</fullName>
        <label>Schedule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledPeriodEndDateTime__c</fullName>
        <label>Scheduled End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledPeriodStartDateTime__c</fullName>
        <label>Scheduled Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCodeId__c</fullName>
        <label>Status Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCodeObject__c</fullName>
        <label>Status Reason Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuppliedMedicationQuantityUOMId__c</fullName>
        <label>Supplied Medication Quantity UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuppliedMedicationQuantity__c</fullName>
        <label>Supplied Medication Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaskId__c</fullName>
        <label>Task</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838212064_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanActivity_ActivityCodeId_map__rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CarePlanActivity_ActivityCodeId_map__rel</relationshipLabel>
        <relationshipName>rel_1734838212064_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838214542_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanActivity_ActivityLocationId__rel</label>
        <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
        <relationshipLabel>CarePlanActivity_ActivityLocationId__rel</relationshipLabel>
        <relationshipName>rel_1734838214542_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1734838216401_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanActivity_ActivityCodeId_map__rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CarePlanActivity_ActivityCodeId_map__rel</relationshipLabel>
        <relationshipName>rel_1734838216401_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>